--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         <li><a href="https://senzy01.github.io/Daily-Achievement-tracker/" target="_blank">Daily Achievement Tracker</a></li>
       </ul>
       <ul>
+        <li><a href="https://senzy01.github.io/Purpose/" target="_blank">What's my purpose?</a></li>
+      </ul>
+      <ul>
         <li><a href="https://senzy01.github.io/motivation/" target="_blank">Motivation</a></li>
       </ul>
       <ul>
