--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
 
        <!-- Blog Section -->
     <section id="blog">
-      <h2>Blog (Coming Soon)</h2>
-      <p>Sharing my thoughts, experiences, and tutorials on modern web development soon.</p>
+      <h2>Blog</h2>
+      <h1>SenzyScript</h1>
+      <p>My dev blog on Hashnode — covering frontend tips, real-time projects, and lessons learned along my journey.</p>
+      <p><a href="https://senzyscripts.hashnode.dev" target="_blank" class="senzy-link">→ View all posts on SenzyScript</a></p>
     </section>
 
   </main>
