--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
       <h2>Projects</h2>
       <p>A glimpse into some of the interfaces and applications I’ve crafted with passion, precision, and performance in mind.</p>
       <ul>
+        <li><a href="https://senzyenterprises.github.io/yumbrix/" target="_blank">Yumbrix</a></li>
+      </ul>
+      <ul>
+        <li><a href="https://senzyenterprises.github.io/1/" target="_blank">Senzy Enterprises</a></li>
+      </ul>
+      <ul>
         <li><a href=" https://senzy01.github.io/behindthesmile/" target="_blank">Behind the smile</a></li>
       </ul>
       <ul>
