--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
       <h2>Projects</h2>
       <p>A glimpse into some of the interfaces and applications I’ve crafted with passion, precision, and performance in mind.</p>
       <ul>
+        <li><a href="https://senzyenterprises.github.io/Amora/" target="_blank">Amora</a></li>
+      </ul>
+      <ul>
         <li><a href="https://senzyenterprises.github.io/yumbrix/" target="_blank">Yumbrix</a></li>
       </ul>
       <ul>
